objects/Room__c.object
<CustomObject>
    <description>A Room in a hotel</description>
    <fields>
        <fullName>AirConditioner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>presence of air conditioning in the room</description>
        <inlineHelpText>presence of air conditioning in the room</inlineHelpText>
        <label>Air Conditioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guests__c</fullName>
        <description>Number of guests the room can fit</description>
        <inlineHelpText>Number of guests the room can fit</inlineHelpText>
        <label>Guests</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <description>The hotel in which the room is located</description>
        <inlineHelpText>The hotel in which the room is located</inlineHelpText>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>room photo (1280x720 fit best)</description>
        <inlineHelpText>room photo (1280x720 fit best)</inlineHelpText>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MiniBar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Presence of mini bar in the room</description>
        <inlineHelpText>Presence of mini bar in the room</inlineHelpText>
        <label>Mini Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NightlyRate__c</fullName>
        <description>Rent cost per night</description>
        <inlineHelpText>Rent cost per night</inlineHelpText>
        <label>Nightly Rate</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NoSmoking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The room is completely smoke-free</description>
        <inlineHelpText>The room is completely smoke-free</inlineHelpText>
        <label>No Smoking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of rooms of that type in the hotel</description>
        <inlineHelpText>Quantity of rooms of that type in the hotel</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Presence room service (e.g. food delivery to the door) in the room</description>
        <inlineHelpText>Presence room service (e.g. food delivery to the door) in the room</inlineHelpText>
        <label>Room Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WiFi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Presence of Wi-Fi in the room</description>
        <inlineHelpText>Presence of Wi-Fi in the room</inlineHelpText>
        <label>Wi-Fi</label>
        <type>Checkbox</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hotel__c</columns>
        <columns>Guests__c</columns>
        <columns>NightlyRate__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>